--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
   h1 {color: green;}
 
+
     </style>
 </head>
 <body>
@@ -25,7 +26,9 @@
     <del>знакомлюсь</del>
     </del> передаюсь <em>воздушно-капельным</em> путём через вдыхание распылённых
     в воздухе при кашле, чихании или разговоре капель с вирусом, а
-    также через попадание вируса на поверхности с последующим занесением в <mark>глаза, нос или рот</mark>.
+    также через попадание вируса на поверхности с последующим занесением в
+    <mark>глаза, нос или рот</mark>
+    .
 </p>
 
 </body>
